# av-converter

./: .gitignore  CONTRIBUTING.md  README.md  convert.bat  converter.py  enhanced_converter.bat  medium_article.md  peg_this.bat  peg_this.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/peg_this/: ffmpeg_log.txt
